[package]
name = "flows-email"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
webhook-flows = "0.4"
flowsnet-platform-sdk = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1"
zstd-sys = "=2.0.9"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
sendgrid = { version = "0.20", features=["rustls"], default-features=false }
